still trying to fix the photo overlap in teh about section. I also updated the THI Graphic

--- a/css/styles.css
+++ b/css/styles.css
@@ -761,8 +761,8 @@ h3 {
 }
 
 .thiPromo {
-    height: 50vw;
-    width: 60vw;
+    height: 100%;
+    width: 100%;
     background-image: url(../img/thiGraphic.jpeg);
     background-size: cover;
 }
